@@ -129,9 +129,9 @@ Global options that can be specified are:
 .br
 String: cachedir (Specifies a different location to store cache files.  Could be used to share a single cache dir between a trusted group of users, to reduce HD/bandwidth usage, while still allowing each user to have their own config/midinfo files.)
 .br
-Integral: limit, tries, debug, delay, usegz(-1=default, 0=uncompressed, 1-9=gzip compression level), timeout, maxstreaming, idletimeout, maxconnections
+Integral: limit, tries, debug, delay, usegz(-1=default, 0=uncompressed, 1-9=gzip compression level), timeout, maxstreaming, idletimeout, maxconnections, penaltystrikes(number of consecutive connect errors before penalizing a server, -1 to disable penalization), initialpenalty(number of seconds to ignore a penalized server for)
 .br
-Float: curservmult
+Float: curservmult, penaltymultiplier(multiplier for penalty time for each time the penalty time runs out and the server continues to be down)
 .br
 Boolean(0/1): case, complete, dupeidcheck, dupefilecheck, quiet, tempshortnames(1=Use 8.3 tempfile names (for old dos partitions, etc), 0=Use 17.3 tempfile names), unequal_line_error, fullxover
 .br
